# crates-io-api

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  flake.nix  shell.nix
.circleci/: config.yml  run-tests.sh
.github/: dependabot.yml
.github/workflows/: rust.yml
src/: async.rs  async_client.rs  error.rs  helper.rs  lib.rs  sync.rs  sync_client.rs  types.rs  util.rs
