[package]
authors = ["theduke <chris@theduke.at>"]
name = "crates_io_api"
description = "API client for crates.io"
license = "MIT/Apache-2.0"
repository = "https://github.com/theduke/crates-io-api"
documentation = "https://docs.rs/crates_io_api"
readme = "README.md"
keywords = [ "crates", "api" ]
categories = [ "web-programming", "web-programming::http-client" ]
edition = "2018"

version = "0.11.0"

[dependencies]
chrono = { version = "0.4.6", default-features = false, features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json"] }
serde = "1.0.79"
serde_derive = "1.0.79"
serde_json = "1.0.32"
url = "2.1.0"
futures = "0.3.4"
tokio = { version = "1.0.1", default-features = false, features = ["sync", "time"] }
serde_path_to_error = "0.1.8"

[dev-dependencies]
tokio = { version = "1.0.1", features = ["macros"]}

[features]
default = ["reqwest/default-tls"]
rustls = ["reqwest/rustls-tls"]
